Checking in alecf's fix for bug 112209, string code performance regression. r=dbaron@netscape.com, sr=jst@netscape.com